@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-01T08:24:32Z",
+  "timestamp" : "2022-09-02T08:22:29Z",
   "count_outdated" : 119,
   "uniques_outdated" : 81,
-  "count" : 138,
-  "uniques" : 94,
+  "count" : 139,
+  "uniques" : 95,
   "clones" : [
     {
       "timestamp": "2022-08-26T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 2, 5 ],
       "uniques": 4,
       "uniques_minmax": [ 1, 4 ]
+    },
+    {
+      "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
