@@ -1,6 +1,6 @@
 {
-  "count": 19,
-  "uniques": 8,
+  "count": 20,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-08-26T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-31T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2022-09-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
