@@ -1,3 +1,11 @@
+2022-09-02T08:22:29Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2977639866
+* notice: last 14d: unq all: 9 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 81 119 / 94 138
+* notice: next accum: outdated-unq outdated-all / unq all: 81 119 / 95 139
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-02]
+
 2022-09-01T08:24:32Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2970054425
 * notice: last 14d: unq all: 8 19
